# Fund-advisor

./: .env.example  .gitignore  README.md  pyproject.toml
config/: portfolio.yaml  settings.yaml
src/fund_advisor/: __init__.py
src/fund_advisor/advisor/: __init__.py  advisor.py  redemption.py
src/fund_advisor/data/: __init__.py  akshare_client.py  portfolio_loader.py  usage_db.py
src/fund_advisor/diagnostics/: __init__.py  capital.py  concentration.py  cost.py  position.py  risk.py  valuation.py
src/fund_advisor/llm/: __init__.py  client.py  factory.py  prompts.py  synthesizer.py
src/fund_advisor/models/: __init__.py  diagnosis.py  fund.py  portfolio.py  settings.py
src/fund_advisor/scheduler/: daily_job.py  runner.py
src/fund_advisor/ui/: app.py
tests/: conftest.py  test_akshare_client.py  test_portfolio_loader.py  test_ui_app.py
tests/advisor/: test_advisor_flow.py  test_data_quality.py  test_redemption.py
tests/diagnostics/: test_capital.py  test_concentration.py  test_cost.py  test_position.py  test_risk.py  test_valuation.py
tests/llm/: test_synthesizer.py  test_usage_db.py
tests/scheduler/: test_daily_job.py
